crates/laplace-macro/tests/ui/fail/verify_scenario_threads.rs
// SPDX-License-Identifier: Apache-2.0

#[laplace_macro::laplace_verify(scenario, threads = 2)]
fn scenario_threads() {}

fn main() {}
